--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "csv-parser": "^3.1.0",
+    "express": "^4.21.2",
+    "multer": "1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
