--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "@swc/helpers": "~0.5.0",
     "@testing-library/jest-dom": "^6.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@nx/cypress": "16.5.0",
